# AI-Systems

./: .gitignore  AI Systems.sln  CMakeLists.txt  README.md
AISystems/: CMakeLists.txt
AISystems/include/: AISystemsMain.h
AISystems/include/DecisionTrees/: DTDataset.h
AISystems/include/DecisionTrees/BuildAlgorithms/: ID3.h
AISystems/include/DecisionTrees/DecisionTree/: DecisionTree.h
AISystems/include/DecisionTrees/DecisionTree/Nodes/: DecisionNode.h  LeafNode.h  Node.h
AISystems/include/Utils/: ConsoleColor.h
AISystems/src/: AISystemsMain.cpp
AISystems/src/DecisionTrees/: DTDataset.cpp
AISystems/src/DecisionTrees/BuildAlgorithms/: ID3.cpp
AISystems/src/DecisionTrees/DecisionTree/: DecisionTree.cpp
AISystems/src/DecisionTrees/DecisionTree/Nodes/: DecisionNode.cpp  LeafNode.cpp
AISystems/src/Utils/: ConsoleColor.cpp
DecisionTreeAlgorithms/: CMakeLists.txt  DTDataset.cpp  DTDataset.h  DecisionNode.cpp  DecisionNode.h  DecisionTree.cpp  DecisionTree.h  DecisionTreeAlgorithms.vcxproj  DecisionTreeAlgorithms.vcxproj.filters  ID3.cpp  ID3.h  LeafNode.cpp  LeafNode.h  Node.h  main.cpp
DecisionTreeAlgorithms/Datasets/: weather_data.csv
